<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center_vertical"
    tools:context=".GameDisplayActivity">

    <TextView
        android:id="@+id/title_noresultfound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_noresultfound"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_margin"/>


    <TextView
        android:id="@+id/text_noresultfound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_noresultfound"
        android:textSize="@dimen/default_text"
        android:lineSpacingMultiplier="1.4"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/wide_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button_makeagain"
            android:text="@string/button_makeagain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_normal"
            android:textColor="@color/text_color"
            android:textSize="@dimen/default_text"
            android:layout_weight="1"
            android:lineSpacingMultiplier="0.7"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button_nofoundactivities"
            android:text="@string/button_nofoundactivities"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_normal"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@color/text_color"
            android:textSize="@dimen/default_text"
            />
    </LinearLayout>



</LinearLayout>