<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center_vertical"
    tools:context=".GameDisplayActivity">

    <TextView
        android:id="@+id/title_nomoreresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_nomoreresult"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_margin"/>


    <TextView
        android:id="@+id/text_nomoreresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nomoreresult"
        android:textSize="@dimen/default_text"
        android:lineSpacingMultiplier="1.4"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/wide_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/wide_size"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back"
                android:text="@string/button_back"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/button_normal"
                android:layout_margin="@dimen/thin_margin"
                android:textColor="@color/text_color"
                android:textSize="@dimen/default_text"
                android:layout_weight="1"
                android:lineSpacingMultiplier="0.7"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/button_continue"
                android:text="@string/button_continue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/button_normal"
                android:layout_margin="@dimen/thin_margin"
                android:textColor="@color/text_color"
                android:textSize="@dimen/default_text"
                android:layout_weight="1"
                android:lineSpacingMultiplier="0.7"
                android:layout_gravity="center"
                />

         </LinearLayout>


        <Button
            android:id="@+id/button_myactivities"
            android:text="@string/button_myactivities"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_normal"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/thin_margin"
            android:layout_marginRight="@dimen/thin_margin"
            android:background="@color/text_color"
            android:textSize="@dimen/default_text"
            />
    </LinearLayout>



</LinearLayout>