<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center_vertical"
    tools:context=".GameDisplayActivity">

    <TextView
        android:id="@+id/title_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_result"
        android:textSize="@dimen/middle_text"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/medium_margin"/>


    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lis l'intégrale du seigneur des anneaux, pour voir les différences avec le film"
        android:textSize="@dimen/default_text"
        android:lineSpacingMultiplier="1.4"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/middle_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:gravity="center_horizontal"
        >


        <Button
            android:id="@+id/button_ok"
            android:text="@string/button_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_normal"
            android:layout_margin="@dimen/mediumsmall_margin"
            android:textColor="@color/text_color"
            android:textSize="@dimen/default_text"
            />

        <Button
            android:id="@+id/button_next"
            android:text="@string/button_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_normal"
            android:layout_margin="@dimen/mediumsmall_margin"
            android:textColor="@color/text_color"
            android:textSize="@dimen/default_text"
            />
    </LinearLayout>



</LinearLayout>