<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center_vertical"
    tools:context=".GameDisplayActivity">


    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Question sur l'activité"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        >

        <Button
            android:id="@+id/btn_yes"
            android:text="@string/answer_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_normal"
            android:layout_margin="@dimen/thin_margin"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text"
            />

        <Button
            android:id="@+id/btn_maybe"
            android:text="@string/answer_maybe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_normal"
            android:layout_margin="@dimen/thin_margin"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text"
            />

        <Button
            android:id="@+id/btn_no"
            android:text="@string/answer_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_normal"
            android:layout_margin="@dimen/thin_margin"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_text"
            />

        <TextView
            android:id="@+id/number_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:textColor="@color/text_color"
            android:gravity="right"
            android:text="1/10"
            android:textSize="@dimen/small_text"/>

    </LinearLayout>

</LinearLayout>
